<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/service_detail_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/service_detail_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="TextView"
            android:textSize="@dimen/card_item_title"
            app:layout_constraintEnd_toStartOf="@+id/edit_detail_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="?android:attr/textColorSecondary"
            android:text="TextView"
            android:textSize="@dimen/card_item_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/time_imageView"
            app:layout_constraintTop_toBottomOf="@+id/time_imageView" />

        <TextView
            android:id="@+id/pending_detail_price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/card_item_details"
            app:layout_constraintBottom_toBottomOf="@+id/money_imageView"
            app:layout_constraintStart_toEndOf="@+id/money_imageView"
            app:layout_constraintTop_toTopOf="@+id/money_imageView" />

        <TextView
            android:id="@+id/pending_detail_execution_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/card_item_details"
            app:layout_constraintBottom_toBottomOf="@+id/time_imageView"
            app:layout_constraintStart_toEndOf="@+id/time_imageView"
            app:layout_constraintTop_toTopOf="@+id/time_imageView" />

        <ImageView
            android:id="@+id/time_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:layout_constraintStart_toStartOf="@+id/detail_category_textView"
            app:layout_constraintTop_toBottomOf="@+id/detail_category_textView"
            app:srcCompat="@drawable/round_access_time_24" />

        <ImageView
            android:id="@+id/money_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@color/colorTransparent"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:layout_constraintBottom_toBottomOf="@+id/time_imageView"
            app:layout_constraintStart_toEndOf="@+id/pending_detail_execution_time_textView"
            app:layout_constraintTop_toTopOf="@+id/time_imageView"
            app:srcCompat="@drawable/round_attach_money_24" />

        <ImageButton
            android:id="@+id/edit_detail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@color/colorTransparent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/delete_detail_button"
            app:layout_constraintEnd_toStartOf="@+id/delete_detail_button"
            app:layout_constraintTop_toTopOf="@+id/delete_detail_button"
            app:srcCompat="@drawable/round_edit_24" />

        <ImageButton
            android:id="@+id/delete_detail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorTransparent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/round_delete_forever_24" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_description" />

        <TextView
            android:id="@+id/detail_category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/card_item_details"
            app:layout_constraintStart_toStartOf="@+id/detail_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/service_detail_edit_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_price_inputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_price_inputLayout"
            app:layout_constraintTop_toTopOf="@+id/detail_price_inputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/detail_title_inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detail_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_edit_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/detail_time_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/detail_title_inputLayout"
            app:layout_constraintTop_toBottomOf="@+id/detail_title_inputLayout"
            card_view:srcCompat="@drawable/round_access_time_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/detail_time_inputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxWidth="120dp"
            android:minWidth="80dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_time_imageView"
            app:layout_constraintStart_toEndOf="@+id/detail_time_imageView"
            app:layout_constraintTop_toTopOf="@+id/detail_time_imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detail_time_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/detail_edit_time"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/detail_price_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_time_imageView"
            app:layout_constraintStart_toEndOf="@+id/detail_time_inputLayout"
            app:layout_constraintTop_toTopOf="@+id/detail_time_imageView"
            card_view:srcCompat="@drawable/round_attach_money_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/detail_price_inputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxWidth="120dp"
            android:minWidth="80dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_price_imageView"
            app:layout_constraintStart_toEndOf="@+id/detail_price_imageView"
            app:layout_constraintTop_toTopOf="@+id/detail_price_imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detail_price_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_edit_price"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/detail_description_inputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_price_inputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detail_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_edit_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acccept_decline_changes_linear" />

        <LinearLayout
            android:id="@+id/acccept_decline_changes_linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_description_inputLayout">

            <Button
                android:id="@+id/pending_accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pastel_green"
                android:text="@string/button_ok" />

            <Button
                android:id="@+id/pending_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pastel_red"
                android:text="@string/button_cancel" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>